--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.5
   flutter_map: ^8.2.2
+  location: ^8.0.1
 
 dev_dependencies:
   flutter_test:
